# rocon_qt_gui

./: .gitignore  .travis.yml  README.md  stack.xml
concert_admin_app/: CHANGELOG.rst  CMakeLists.txt  admin_app_plugin.xml  package.xml  setup.py
concert_admin_app/scripts/: concert_admin_app
concert_admin_app/src/concert_admin_app/: __init__.py  admin_app.py  admin_app_interface.py
concert_admin_app/ui/: admin_app.ui
concert_conductor_graph/: .project  CHANGELOG.rst  CMakeLists.txt  conductor_plugin.xml  package.xml  setup.py
concert_conductor_graph/scripts/: concert_qt_conductor_graph
concert_conductor_graph/src/concert_conductor_graph/: __init__.py  concert_client.py  conductor_graph.py  conductor_graph_info.py  dotcode.py  interactive_graphics_view.py
concert_conductor_graph/ui/: conductor_graph.ui
concert_qt_image_stream/: .project  CHANGELOG.rst  CMakeLists.txt  concert_image_stream_plugin.xml  package.xml  setup.py
concert_qt_image_stream/scripts/: concert_image_stream
concert_qt_image_stream/src/concert_qt_image_stream/: __init__.py  image_stream.py
concert_qt_image_stream/src/concert_qt_teleop/: image_stream.py
concert_qt_image_stream/ui/: concert_image_stream.ui
concert_qt_make_a_map/: CHANGELOG.rst  CMakeLists.txt  concert_make_a_map_plugin.xml  package.xml  setup.py
concert_qt_make_a_map/scripts/: concert_make_a_map
concert_qt_make_a_map/src/concert_qt_make_a_map/: __init__.py  make_a_map.py
concert_qt_make_a_map/ui/: concert_make_a_map.ui
concert_qt_map_annotation/: CHANGELOG.rst  CMakeLists.txt  concert_map_annotation_plugin.xml  package.xml  setup.py
concert_qt_map_annotation/scripts/: concert_map_annotation
concert_qt_map_annotation/src/concert_qt_map_annotation/: __init__.py  map_annotation.py
concert_qt_map_annotation/ui/: concert_map_annotation.ui
concert_qt_service_info/: .project  CHANGELOG.rst  CMakeLists.txt  concert_service_info_plugin.xml  package.xml  setup.py
concert_qt_service_info/src/concert_qt_service_info/: concert_service_info.py
concert_qt_service_info/ui/: concert_service_info.ui
concert_qt_teleop/: .project  CHANGELOG.rst  CMakeLists.txt  concert_teleop_plugin.xml  package.xml  setup.py  teleop_app_plugin.xml
concert_qt_teleop/scripts/: concert_teleop
concert_qt_teleop/src/concert_qt_teleop/: __init__.py  teleop.py  teleop_app.py  teleop_app_info.py
concert_qt_teleop/ui/: concert_teleop.ui  teleop_app.ui  virtual_joystick.qml
concert_teleop_app/: .project  CMakeLists.txt  Readme.md  package.xml  setup.py  teleop_app_plugin.xml
concert_teleop_app/scripts/: concert_teleop_app
concert_teleop_app/src/concert_teleop_app/: teleop_app.py  teleop_app_info.py
concert_teleop_app/ui/: teleop_app.ui  virtual_jostick.qml
rocon_admin_app/: .project  CMakeLists.txt  admin_app_plugin.xml  mainpage.dox  package.xml  setup.py
rocon_admin_app/scripts/: rocon_admin_app
rocon_admin_app/ui/: admin_app.ui
rocon_conductor_graph/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  conductor_plugin.xml  package.xml  setup.py
rocon_gateway_graph/: .project  .pydevproject  CHANGELOG.rst  gateway_plugin.xml  package.xml  setup.py
rocon_gateway_graph/launch/: gateway_graph.launch
rocon_gateway_graph/scripts/: rocon_gateway_graph
rocon_gateway_graph/src/rocon_gateway_graph/: dotcode.py  gateway_graph.py  interactive_graphics_view.py
rocon_qt_app_manager/: .project  CHANGELOG.rst  CMakeLists.txt  package.xml  qt_app_manager_plugin.xml  setup.py
rocon_qt_app_manager/scripts/: rocon_qt_app_manager
rocon_qt_app_manager/src/rocon_qt_app_manager/: __init__.py  qt_app_manager.py  qt_app_manager_info.py  qt_rapp_status_dialog.py  utils.py
rocon_qt_app_manager/ui/: app_dialog.ui  qt_app_manager.ui  qt_rapp_manager.ui  qt_rapp_manager.ui.legacy
rocon_qt_gui/: CHANGELOG.rst  package.xml
rocon_qt_library/: .project  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_qt_library/src/rocon_qt_library/: __init__.py  util.py
rocon_qt_library/src/rocon_qt_library/interfaces/: __init__.py  map_annotation_interface.py  resource_chooser_interface.py  slam_interface.py  slam_widget_interface.py  teleop_interface.py  video_teleop_interface.py
rocon_qt_library/src/rocon_qt_library/utils/: __init__.py  converts.py  world_canvas_utils.py
rocon_qt_library/src/rocon_qt_library/views/: __init__.py  camera_view.py  map_view.py  slam_view.py  virtual_joystick_view.py
rocon_qt_library/src/rocon_qt_library/widgets/: __init__.py  map_annotation.py  resource_chooser.py  slam_widget.py  video_teleop.py
rocon_qt_library/ui/: map_annotation.ui  resource_chooser.ui  slam_widget.ui  video_teleop.ui  virtual_joystick.qml
rocon_qt_listener/: CHANGELOG.rst  package.xml  qt_listener.py
rocon_qt_master_info/: .project  CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_qt_remocon_apps/: CMakeLists.txt  package.xml
rocon_qt_teleop/: .project  CHANGELOG.rst  CMakeLists.txt  package.xml  rocon_teleop_plugin.xml  setup.py
rocon_qt_teleop/launch/: rocon_teleop.launch
rocon_qt_teleop/scripts/: rocon_teleop
rocon_qt_teleop/src/rocon_qt_teleop/: __init__.py  teleop.py
rocon_remocon/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_remocon/resources/cache/: concert_info_list.cache
rocon_remocon/scripts/: remocon.py  rocon_remocon  rocon_remocon_app_launcher  rocon_remocon_check_up  rocon_remocon_sub  rqt_remocon
rocon_remocon/src/rocon_remocon/: __init__.py  icon.py  interaction_dialog.py  interactions_chooser.py  interactions_remocon.py  interactions_table.py  interactive_client.py  interactive_client_interface.py  interactive_client_ui.py  launch.py  launched_interactions.py  master_chooser.py  pairing_dialog.py  remocon.py  remocon_info.py  rocon_masters.py  role_chooser.py  ros_masters.py  rqt_remocon  rqt_remocon.py  utils.py
rocon_remocon/ui/: applist.ui  interaction_dialog.ui  interactions_chooser.ui  interactions_list.ui  pairing_dialog.ui  remocon.ui  role_list.ui  rolelist.ui
rocon_rqt_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+12 files in other folders)
