<?xml version="1.0"?>
<package>
  <name>concert_qt_make_a_map</name>
  <version>0.7.12</version>
  <description>An rqt plugin for SLAM using concert robots</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_qt_teleop</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_qt_gui</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_qt_gui/issues</url>
  <author>Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tf</run_depend>
  <run_depend>rocon_qt_library</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/concert_make_a_map_plugin.xml"/>
  </export>
</package>
