<?xml version="1.0"?>
<package>
  <name>concert_qt_teleop</name>
  <version>0.6.1</version>
  <description>An rqt plugin for teleop'ing concert robots</description>

  <maintainer email="dwlee@yujinrobot.com">Donguk Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_qt_teleop</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_qt_gui</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_qt_gui/issues</url>
  <author>Donguk Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-rospkg</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/teleop_app_plugin.xml"/>
  </export>
</package>
