<package>
  <name>rocon_gateway_graph</name>
  <version>0.5.1</version>
  <description>
    A hub acts as a shared key-value store for multiple ros 
    systems (primarily used by gateways).
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rocon_gateway_graph</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_gateway</run_depend>
  <run_depend>rocon_utilities</run_depend>
  <run_depend>python-rospkg</run_depend>
  
  <export>
    <rqt_gui plugin="${prefix}/gateway_plugin.xml"/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
