<?xml version="1.0"?>
<package>
  <name>rocon_qt_app_manager</name>
  <version>0.7.12</version>
  <description>the qt gui for app manager</description>

  <maintainer email="dwlee@yujinrobot.com">Donguk Lee</maintainer>
  <license>BSD</license>

  <author>Donguk Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rocon_app_manager_msgs</run_depend>
  

  <export>
    <rqt_gui plugin="${prefix}/qt_app_manager_plugin.xml"/>
  </export>
</package>
