<?xml version="1.0"?>
<package>
  <name>rocon_qt_gui</name>
  <version>0.7.12</version>
  <description>
    Qt gui applications for interacting with the rocon framework.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_qt_gui</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_qt_qui</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_qt_qui/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>concert_admin_app</run_depend>
  <run_depend>concert_conductor_graph</run_depend>
  <run_depend>concert_qt_make_a_map</run_depend>
  <run_depend>concert_qt_map_annotation</run_depend>
  <run_depend>concert_qt_service_info</run_depend>
  <run_depend>concert_qt_teleop</run_depend>
  <run_depend>rocon_gateway_graph</run_depend>
  <run_depend>rocon_qt_app_manager</run_depend>
  <run_depend>rocon_qt_library</run_depend>
  <run_depend>rocon_qt_listener</run_depend>
  <run_depend>rocon_qt_master_info</run_depend>
  <run_depend>rocon_qt_teleop</run_depend>
  <run_depend>rocon_remocon</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

