<?xml version="1.0"?>
<package>
  <name>rocon_qt_library</name>
  <version>0.7.12</version>
  <description>Common widgets and modules for rocon qt development.</description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_qt_library</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_qt_gui</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_qt_gui/issues</url>
  <author>Donguk Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rocon_bubble_icons</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>world_canvas_client_py</run_depend>
  <run_depend>world_canvas_msgs</run_depend>
  <run_depend>yocs_msgs</run_depend>
</package>
