<?xml version="1.0"?>
<package>
  <name>rocon_qt_teleop</name>
  <version>0.7.12</version>
  <description>An rqt plugin for teleop'ing robots</description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_qt_teleop</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_qt_gui</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_qt_gui/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_qt_library</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/rocon_teleop_plugin.xml"/>
  </export>
</package>
