<?xml version="1.0"?>
<package>
  <name>rocon_remocon</name>
  <version>0.6.1</version>
  <description>A qt based remocon for interacting with ros systems.</description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="dwlee@yujinrobot.com">Donguk Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_remocon</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_qt_gui</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_qt_gui/issues</url>
  <author>Daniel Stonier</author>
  <author>Donguk Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_gateway</run_depend>
  <run_depend>rocon_utilities</run_depend>
  <run_depend>python-rospkg</run_depend>
</package>
